tests/errors/type_check/rvalue_typing/rvalue_enum_constr_wrong_payload_type.sim

        enum Option: Copy + Drop { None: unit Some: i64 }
        fn f() {
            o: Option;
            entry:
            o = Option::Some(true);
            return
        }
        